--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "diff": "^5.0.0",
+    "panzoom": "^9.4.2",
     "sirv-cli": "^1.0.0"
   }
 }
